# MathematicaLinkServer

./: CMakeLists.txt  MathematicaLinkServer.c
